--- a/FrontEnd/templates/Games.html
+++ b/FrontEnd/templates/Games.html
@@ -294,6 +294,17 @@ margin-left:20%;
         cursor: pointer;
     }
 
+    .empty-message {
+        text-align: center;
+        padding: 17%; 
+        margin-top: 20%; 
+        margin-right: 20%;
+        font-size: 120%; 
+        color: #ff069a; 
+        font-family: "Poppins", sans-serif;
+
+}
+
     </style>
     <script>
         
@@ -499,9 +510,18 @@ margin-left:20%;
                 data: requestData,
                 dataType: 'json',
                 success: function (response) {
-                    makeAjaxRequest(1, 1);
+                    //alert(response.filtered_games );
+                    if (response.filtered_games != -1) {
+                        //alert('i.m in');
+                        makeAjaxRequest(1, 1);
                     //updateGamesContainer(response);
-                    console.log(response);
+                } else if(response.filtered_games == -1)  {
+                    //alert('NOTHING');
+                    console.error('Error: Empty response received.');
+                    $('.GAMES').html('<p class="empty-message">There are no games to ba dispalyed based on the selected filters.</p>');
+                    $('.paginationList').hide();
+
+                }
                 },
                 error: function (error) {
                     console.error('Error fetching games:', error);
@@ -783,7 +803,7 @@ $('#clearFilters').on('click', clearAllFilters);
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<div class="pagination-wrap">
-    <ul>
+    <ul class="paginationList">
 
         <li><a href="?page={{ games.previous_page_number }}" class="edg">Prev</a></li>
 
